refactor: replace Collectors.toList() with toList() (Java 16+)